samples/_failures_safe/1761254956_58adc4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6c7cde5e.c: In function ‘main’:
./samples/SAFE/__tmp_6c7cde5e.c:138:21: error: expected declaration or statement at end of input
  138 |                     print_matrix(&result);
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_6c7cde5e.c:138:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6c7cde5e.c:138:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6c7cde5e.c:138:21: error: expected declaration or statement at end of input
